# 3-python-package-gmjm

./: Pipfile  README.md  pyproject.toml
pyriddles/: __init__.py  __main__.py  cli.py  config.py  example_usage.py  hints.py  riddles.py  use_difficulty.py
tests/: test_arbitrary_riddle.py  test_difficulties.py  test_hints.py  tests_cli.py
